GASCDS-533: add json tests, align yaml to query param casing
