# gascd_api/api/Endpoints/MetricLocation/CpLocations/GetCareProviderLocationRequest.cs
@@ -7,6 +7,6 @@ public class GetCareProviderLocationRequest
     [RouteParam]
     public required string CareProviderLocationCode { get; set; }
 
-    [QueryParam]
+    [QueryParam, BindFrom("include_parents")]
     public bool IncludeParents { get; set; }
 }
